--- a/css/app.css
+++ b/css/app.css
@@ -443,6 +443,7 @@ img.chigai_img_02 {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 48px!important;
 }
 
 
@@ -993,3 +994,28 @@ position: relative;
         flex-wrap: wrap-reverse;
 
     } */
+    .accordion-content {
+  position: relative;
+    }
+
+    .accordion-content::before {
+        content: "A";
+        display: flex;
+        background: #7BBDE7;
+        width: 70px;
+        height: 70px;
+        position: absolute;
+        left: -70px;
+        top: 0;
+        justify-content: center;
+    align-items: center;
+    font-size: 48px;
+    color: #fff;
+    }
+
+    p.question {
+        display: flex;
+        align-items: center;
+        margin: 0;
+        padding-left: 20px;
+    }
