--- a/css/app.css
+++ b/css/app.css
@@ -1019,3 +1019,13 @@ position: relative;
         margin: 0;
         padding-left: 20px;
     }
+
+.merit-ttl h2{
+      font-family: "Zen Old Mincho", serif !important;
+
+}
+
+h3{
+    font-family: "Zen Old Mincho", serif !important;
+
+}
