--- a/css/voice-detail.css
+++ b/css/voice-detail.css
@@ -887,6 +887,28 @@ a.button {
     padding-right: calc(50vw - 50%);
     background: #E7EFF2;
    }
-   
 
+   .customer {
+    padding-top: 100px;
+    background: #F8FCFF;
+}
+   
+.top-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: #fff;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 20px;
+    text-decoration: none;
+    z-index: 9999;
+    transition: opacity 0.3s;
+}  
+ 
+   .top-button:hover {
+    background: #555;
+   }
    
